syntax = "proto3";
package secret.compute.v1;

option go_package = "github.com/scrtlabs/SecretNetwork/x/compute/internal/types";

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos/base/v1beta1/coin.proto";
import "amino/amino.proto";

// Msg defines the wasm Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  // StoreCode to submit Wasm code to the system
  rpc StoreCode(MsgStoreCode) returns (MsgStoreCodeResponse);
  //  Instantiate creates a new smart contract instance for the given code id.
  rpc InstantiateContract(MsgInstantiateContract)
      returns (MsgInstantiateContractResponse);
  // Execute submits the given message data to a smart contract
  rpc ExecuteContract(MsgExecuteContract) returns (MsgExecuteContractResponse);
  // Migrate runs a code upgrade/ downgrade for a smart contract
  rpc MigrateContract(MsgMigrateContract) returns (MsgMigrateContractResponse);
  // UpdateAdmin sets a new   admin for a smart contract
  rpc UpdateAdmin(MsgUpdateAdmin) returns (MsgUpdateAdminResponse);
  // ClearAdmin removes any admin stored for a smart contract
  rpc ClearAdmin(MsgClearAdmin) returns (MsgClearAdminResponse);
}

message MsgStoreCode {
  option (gogoproto.goproto_getters) = false;
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name) = "wasm/MsgStoreCode";

  // // sender is the canonical address of the sender
  // bytes sender = 1 [ (gogoproto.casttype) =
  //                        "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  // Sender is the actor that signed the messages
  string sender = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  // WASMByteCode can be raw or gzip compressed
  bytes wasm_byte_code = 2 [ (gogoproto.customname) = "WASMByteCode" ];
  // Source is a valid absolute HTTPS URI to the contract's source code,
  // optional
  string source = 3;
  // Builder is a valid docker image name with tag, optional
  string builder = 4;
}

// MsgStoreCodeResponse returns store result data.
message MsgStoreCodeResponse {
  // CodeID is the reference to the stored WASM code
  uint64 code_id = 1 [ (gogoproto.customname) = "CodeID" ];
}

message MsgInstantiateContract {
  // option (gogoproto.goproto_getters) = false;
  option (cosmos.msg.v1.signer) = "sender_address";
  option (amino.name) = "wasm/MsgInstantiateContract";

  // sender is the canonical address of the sender
  // string sender = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  string callback_code_hash = 2;
  uint64 code_id = 3 [ (gogoproto.customname) = "CodeID" ];
  string label = 4;
  // init_msg is an encrypted input to pass to the contract on init
  bytes init_msg = 5;
  repeated cosmos.base.v1beta1.Coin init_funds = 6 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true,
    (amino.encoding) = "legacy_coins",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  // used internally for encryption, should always be empty in a signed
  // transaction
  bytes callback_sig = 7 [ (gogoproto.customname) = "CallbackSig" ];
  // Admin is an optional address that can execute migrations
  string admin = 8;
  // To get the message signer define sender_address as human adress for sender,
  // as a work around without the need to modify cosmwasm valiation logic
  string sender_address = 9 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
}

// MsgInstantiateContractResponse return instantiation result data
message MsgInstantiateContractResponse {
  // Address is the bech32 address of the new contract instance.
  string address = 1;
  // Data contains base64-encoded bytes to returned from the contract
  bytes data = 2;
}

message MsgExecuteContract {
  option (gogoproto.goproto_getters) = false;
  option (cosmos.msg.v1.signer) = "sender_address";
  option (amino.name) = "wasm/MsgExecuteContract";

  // sender is the canonical address of the sender
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  // contract is the canonical address of the contract
  bytes contract = 2 [ (gogoproto.casttype) =
                           "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  // msg is an encrypted input to pass to the contract on execute
  bytes msg = 3;
  // used internally for encryption, should always be empty in a signed
  // transaction
  string callback_code_hash = 4;
  repeated cosmos.base.v1beta1.Coin sent_funds = 5 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true,
    (amino.encoding) = "legacy_coins",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  // used internally for encryption, should always be empty in a signed
  // transaction
  bytes callback_sig = 6 [ (gogoproto.customname) = "CallbackSig" ];
  string sender_address = 7;
}

// MsgExecuteContractResponse returns execution result data.
message MsgExecuteContractResponse {
  // Data contains base64-encoded bytes to returned from the contract
  bytes data = 1;
}

// MsgMigrateContract runs a code upgrade/ downgrade for a smart contract
message MsgMigrateContract {
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name) = "wasm/MsgMigrateContract";

  // Sender is the that actor that signed the messages
  string sender = 1;
  // Contract is the address of the smart contract
  string contract = 2;
  // CodeID references the new WASM code
  uint64 code_id = 3 [ (gogoproto.customname) = "CodeID" ];
  // msg is an encrypted input to pass to the contract on migration
  bytes msg = 4;
  // used internally for encryption, should always be empty in a signed
  // transaction
  bytes callback_sig = 7 [ (gogoproto.customname) = "CallbackSig" ];
  // used internally for encryption, should always be empty in a signed
  // transaction
  string callback_code_hash = 8;
}

// MsgMigrateContractResponse returns contract migration result data.
message MsgMigrateContractResponse {
  // Data contains same raw bytes returned as data from the wasm contract.
  // (May be empty)
  bytes data = 1;
}

// MsgUpdateAdmin sets a new admin for a smart contract
message MsgUpdateAdmin {
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name) = "wasm/MsgUpdateAdmin";

  // Sender is the that actor that signed the messages
  string sender = 1;
  // NewAdmin address to be set
  string new_admin = 2;
  // Contract is the address of the smart contract
  string contract = 3;
  // used internally for encryption, should always be empty in a signed
  // transaction
  bytes callback_sig = 7 [ (gogoproto.customname) = "CallbackSig" ];
}

// MsgUpdateAdminResponse returns empty data
message MsgUpdateAdminResponse {}

// MsgClearAdmin removes any admin stored for a smart contract
message MsgClearAdmin {
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name) = "wasm/MsgClearAdmin";

  // Sender is the that actor that signed the messages
  string sender = 1;
  // Contract is the address of the smart contract
  string contract = 3;
  // used internally for encryption, should always be empty in a signed
  // transaction
  bytes callback_sig = 7 [ (gogoproto.customname) = "CallbackSig" ];
}

// MsgClearAdminResponse returns empty data
message MsgClearAdminResponse {}
